# realtime-hikvision-preview-python

./: CMakeLists.txt  HKIPcamera.cpp  HKIPcamera.h  HKIPcamera.py  HKIPcamera_wrap.cpp  README.md  hik_test.py
npp_cuda/: CMakeLists.txt
